k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-node-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: anushareddy11422/enterprise-node-api:v1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
