k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  type: NodePort
  selector:
    app: node-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
